# TTL-Legacy

./: TTL_Legacy_117_issues.md
backend/: Cargo.toml
backend/src/: db.rs  metrics.rs  models.rs  tests.rs
contracts/ttl_vault/: Cargo.toml
contracts/ttl_vault/benches/: benchmarks.rs
contracts/ttl_vault/src/: beneficiary_auction_tests.rs  beneficiary_rounding_tests.rs  beneficiary_vesting_tests.rs  caps.rs  floors.rs  lib.rs  matching.rs  regression_tests.rs  test.rs  types.rs
docs/: benchmarking-guide.md  beneficiary-auction.md  beneficiary-vesting.md  monitoring-guide.md  token-management.md
